[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "porkbun-domain-mcp"
version = "0.1.2"
description = "Unofficial MCP server for Porkbun domain management"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.12.3",
    "mcp-common>=0.4.8",
    "oneiric>=0.3.6",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.15.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
porkbun-domain-mcp = "porkbun_domain_mcp.cli:main"

[tool.porkbun-domain-mcp]
http_port = 3043
http_host = "127.0.0.1"
enable_http_transport = false

[dependency-groups]
dev = [
    "crackerjack>=0.50.1",
    "session-buddy>=0.12.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.8.0",
    "bandit>=1.7.9",
    "creosote>=3.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--cov=porkbun_domain_mcp",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow-running tests",
    "network: Tests requiring network access",
]

[tool.coverage.run]
source = ["porkbun_domain_mcp"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.bandit]
exclude_dirs = [".venv", "tests"]

[tool.creosote]
paths = ["porkbun_domain_mcp"]
exclude_files = []
